...
          ),
        }}
      />
      <Tabs.Screen
        name="(fabrics)"
        options={{
          title: "Fabrics",
          tabBarLabel: "Fabrics",
          tabBarAccessibilityLabel: "Fabrics",
          tabBarIcon: ({ color, size, focused }) => (
            <Ionicons
              name={focused ? "color-palette" : "color-palette-outline"}
              size={size}
...
          ),
        }}
      />
      <Tabs.Screen
        name="(profile)"
        options={{
          title: "Profile",
          tabBarLabel: "Profile",
          tabBarAccessibilityLabel: "Profile",
          tabBarIcon: ({ color, size, focused }) => (
            <Ionicons
              name={focused ? "person" : "person-outline"}
              size={size}
...
